--- a/style/landingPageStyle.css
+++ b/style/landingPageStyle.css
@@ -240,8 +240,6 @@ main {
     overflow: hidden;
     width: 35%;
     height: 400px;
-    background-image: url("../assets/picture-landing-page-aboutUs-contactUs.jpg");
-    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -249,28 +247,52 @@ main {
 
 }
 
-.blog-background {
-    width: 100%;
-    height: 100%;
+.blog-content > h2{
+    opacity: 1;
+    display: flex;
+    text-align: center;
+}
+
+#post1 {
+    background-image: url("../assets/blog-pictures/foto1-blog-landing-page-galan-lebron.jpeg");
+    background-size: cover;
+    /* background-color: rgba(255, 255, 255,  0); */
+    /* opacity: 0.7; */
+}
+
+#post2 {
+    background-image: url("../assets/blog-pictures/foto2-blog-landing-page-padel-virtual.jpeg");
+    background-size: cover;
+    /* opacity: 0.7; */
+}
+
+#post3 {
+    background-image: url("../assets/blog-pictures/foto3-blog-landing-page-tere.jpeg");
+    background-size: cover;
+    /* opacity: 0.7; */
 }
 
 .blog-content {
     position: relative;
     top: 70%;
     font-weight: bold;
-    color: #fff;
+    color: #000000;
 }
 
 .blog-post:hover {
     transform: scale(1.05);
     cursor: pointer;
     transition: transform 0.3s ease;
+    opacity: 0.7;
+    transition: opacity 0.3s ease;
 }
 /* Estilos para la ventana emergente */
 .popup {
     position: fixed;
     top: 50%;
     left: 50%;
+    height: 80%;
+    width:50%;
     transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.8);
     padding: 20px;
