--- a/style/landingPageStyle.css
+++ b/style/landingPageStyle.css
@@ -5,6 +5,9 @@ body {
     display: flex;
     flex-direction: column;
 }
+html {
+    scroll-behavior: smooth;
+}
 
 main {
     width: 100%;
@@ -318,8 +321,11 @@ main {
 .aboutus-contactus-landing-page {
     background-image: url("../assets/picture-landingPage-contact-us.jpg");
     background-size: cover;
-    position: relative;
-    display: block;
+    /* position: relative; */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 800px;
 }
