--- a/style/shop.css
+++ b/style/shop.css
@@ -5,12 +5,39 @@ main {
     font-size: 15px;
 }
 
+.filters {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 16%;
+    position: fixed;
+    top: 35vh;
+    left: 2%;
+    box-shadow: 0 5px 5px rgba(117, 117, 117, 0.911);
+}
+
+
+.filters button {
+    border-color: #0087388e;
+    border-radius: 10px;
+    background-color: #00873818;
+    height: 40px;
+    font-size: 15px;
+    margin-bottom: 20px;
+    width: 70%;
+}
+
+.content {
+    margin-left: 20%;
+    width: 60%;
+}
+
 .intro {
     background-image: url(/assets/fondo-shop.png);
     background-size: cover;
     height: 25vh;
     margin-bottom: 5px;
-    /* border-radius: 25px; */
     text-align: center;
 }
 
@@ -22,7 +49,6 @@ main {
 
 .category * {
     display: flex;
-    background-color: #e7e6e6fb;
     width: 100%;
     padding: 10px;
     border-radius: 10px;
@@ -37,10 +63,11 @@ main {
     margin: 0px 15px 0px 15px;
     cursor: pointer;
     font-size: 20px;
-    color: white;
     padding: 5px 10px 5px 10px;
-    border-width: 1px;
-    background-color: #008738;
+    border-color: #0087388e;
+    border-radius: 10px;
+    background-color: #00873818;
+    box-shadow: 0 5px 5px rgba(117, 117, 117, 0.911);
 }
 
 .category li:hover {
@@ -54,18 +81,29 @@ main {
     box-shadow: 0 20px 20px rgba(0, 0, 0, 0.1);
 } */
 
-.filter {
-    display: flex;
-    justify-content: space-evenly;
-    margin-bottom: 20px;
-    background-color: #faedd1;
-    height: 50px;
-    line-height: 50px;
-    border-radius: 25px;
+
+.filter-price {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 70%;
+    margin-top: 0;
 }
 
-label {
-    padding-right: 20px;
+
+.slider {
+    height: 40px;
+}
+
+
+#precio-minimo {
+    font-weight: bold;
+    margin-right: 5px;
+}
+
+#precio-maximo {
+    font-weight: bold;
+    margin-left: 5px;
 }
 
 .products {
@@ -74,6 +112,8 @@ label {
     justify-content: center; 
     gap: 20px;
     margin-top: 20px;
+    border: rgba(0, 0, 0, 0.616);
+    box-shadow: 0 2px 2px rgba(117, 117, 117, 0.911);
 }
 
 .product {
@@ -145,7 +185,7 @@ p {
     font:16px "Lucida Sans Unicode", "Lucida Grande", sans-serif; 
     font-weight: bold; 
     color:#ffffff; 
-    background:#008738; 
+    background:#005587; 
 }
 
 .offer {
