--- a/style/landingPageStyle.css
+++ b/style/landingPageStyle.css
@@ -1,12 +1,14 @@
-
-
 body {
     margin: 0;
     width: 100vw;
     height: auto;
     display: flex;
     flex-direction: column;
+    font-family: 'Quicksand',
+        sans-serif;
+    /*to be implemented*/
 }
+
 html {
     scroll-behavior: smooth;
 }
@@ -37,7 +39,7 @@ main {
 }
 
 .tabs {
-    width: 350px;
+    width: 450px;
     margin-right: 25px;
     display: flex;
     flex-direction: row;
@@ -49,36 +51,16 @@ main {
     transform: scale(1.1);
     transition: 2s;
 }
-/* .shop-btn {
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #09b;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 5px;
-    font-weight: bold;
-    transition: background-color 0.3s ease;
-}
 
-.shop-btn:hover {
-    background-color: #077;
-} */
 
 .tabs>* {
-    /* margin-top: 20px; */
-    /* padding: 10px 20px; */
-    background-color: #09b;
+    background-color: rgb(22, 192, 79);
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
     font-weight: bold;
     padding: 3px;
     transition: background-color 0.3s ease;
-}
-
-.cart-icon {
-    margin-right: 20px;
-    /* Ajusta el margen derecho según sea necesario */
 }
 
 .cart-icon img {
@@ -89,6 +71,7 @@ main {
 .options-navbar {
     display: flex;
     flex-direction: row;
+    padding-right: 50px;
 
 }
 
@@ -98,7 +81,9 @@ main {
 */
 
 .home-landing-page {
-    background-image: url("../assets/hermes-rivera-newhL3aprGk-unsplash.jpg");
+    background-image: linear-gradient(0deg,
+            rgba(0, 0, 0, 0.5),
+            rgba(0, 0, 0, 0.5)), url("../assets/hermes-rivera-newhL3aprGk-unsplash.jpg");
     background-size: cover;
     width: 100%;
     height: 800px;
@@ -122,7 +107,7 @@ main {
     margin-bottom: 20px;
 }
 
-.padelfusion-main{
+.padelfusion-main {
     color: blue;
 }
 
@@ -152,7 +137,9 @@ main {
 }
 
 .shop-landing-page {
-    background-image: url("../assets/picture_landing_page_shop.jpg");
+    background-image: linear-gradient(0deg,
+            rgba(0, 0, 0, 0.5),
+            rgba(0, 0, 0, 0.5)), url("../assets/picture_landing_page_shop.jpg");
     background-size: cover;
     width: 100%;
     height: 800px;
@@ -161,10 +148,17 @@ main {
     align-items: center;
     gap: 50px;
 }
+
 .title-shop-landing-page {
     font-size: 2.5em;
-    color: #333;
+    /* color: #000000; */
     margin-bottom: 20px;
+    background-color: rgb(22, 192, 79);
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    padding: 3px;
 }
 
 .content-shop-landing-page {
@@ -173,6 +167,7 @@ main {
     align-items: center;
     justify-content: center;
 }
+
 .goto-shop {
     width: 50%;
     display: flex;
@@ -196,13 +191,12 @@ main {
 
 .slider {
     width: 500px;
-    height: 500px;
+    height: 550px;
     max-width: 700px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: flex-start; */
     gap: 20px;
 }
 
@@ -217,11 +211,10 @@ main {
 .slide img {
     width: 100%;
     height: auto;
-    /* background-size: cover; */
     border-radius: 10px 10px 0 0;
 }
 
-.contBtnsStyle{
+.contBtnsStyle {
     width: auto;
     display: flex;
     flex-direction: row;
@@ -230,7 +223,8 @@ main {
     background-color: #09b;
     border-radius: 10px;
 }
-.contBtnsStyle > *{
+
+.contBtnsStyle>* {
     cursor: pointer;
 }
 
@@ -238,6 +232,10 @@ main {
     background-color: rgba(255, 255, 255, 0.8);
     padding: 20px;
     text-align: center;
+    height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .shop-btn {
@@ -260,7 +258,9 @@ main {
 //////////////////////////////////END SHOP PAGE//////////////////////////////////
 */
 .blog-landing-page {
-    background-image: url("../assets/picture_landing_page_blogs.jpg");
+    background-image: linear-gradient(0deg,
+            rgba(0, 0, 0, 0.5),
+            rgba(0, 0, 0, 0.5)), url("../assets/picture_landing_page_blogs.jpg");
     background-size: cover;
     width: 100%;
     height: 800px;
@@ -271,20 +271,27 @@ main {
 
 }
 
-.blogs-title-landing-page{
-        font-size: 2.5em;
-            color: #218b17;
-            margin-bottom: 20px;
+.blogs-title-landing-page {
+    font-size: 2.5em;
+    /* color: #000000; */
+    margin-bottom: 20px;
+    background-color: rgb(22, 192, 79);
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    padding: 3px;
 }
 
-.blogs-container{
+.blogs-container {
     width: 80%;
-        display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            gap: 10%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10%;
 }
+
 .blog-post {
     overflow: hidden;
     width: 35%;
@@ -296,7 +303,7 @@ main {
 
 }
 
-.blog-content > h2{
+.blog-content>h2 {
     opacity: 1;
     display: flex;
     text-align: center;
@@ -305,20 +312,16 @@ main {
 #post1 {
     background-image: url("../assets/blog-pictures/foto1-blog-landing-page-galan-lebron.jpeg");
     background-size: cover;
-    /* background-color: rgba(255, 255, 255,  0); */
-    /* opacity: 0.7; */
 }
 
 #post2 {
     background-image: url("../assets/blog-pictures/foto2-blog-landing-page-padel-virtual.jpeg");
     background-size: cover;
-    /* opacity: 0.7; */
 }
 
 #post3 {
     background-image: url("../assets/blog-pictures/foto3-blog-landing-page-tere.jpeg");
     background-size: cover;
-    /* opacity: 0.7; */
 }
 
 .blog-content {
@@ -335,13 +338,14 @@ main {
     opacity: 0.7;
     transition: opacity 0.3s ease;
 }
+
 /* Estilos para la ventana emergente */
 .popup {
     position: fixed;
     top: 50%;
     left: 50%;
     height: 80%;
-    width:50%;
+    width: 50%;
     transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.8);
     padding: 20px;
@@ -366,11 +370,11 @@ main {
 */
 
 .aboutus-contactus-landing-page {
-    background-image: url("../assets/picture-landingPage-contact-us.jpg");
+    background-image: linear-gradient(0deg,
+            rgba(0, 0, 0, 0.5),
+            rgba(0, 0, 0, 0.5)), url("../assets/picture-landingPage-contact-us.jpg");
     background-size: cover;
-    /* position: relative; */
     display: flex;
-    /* flex-direction: row; */
     align-items: center;
     justify-content: center;
     width: 100%;
@@ -379,18 +383,20 @@ main {
 
 }
 
-.aboutus-contactus-landing-page > *{
-    background-image: linear-gradient(to right, rgb(41, 202, 41), rgb(138, 161, 158));
-        border-radius: 5px;
-        width: 60%;
-        height: 60%;
-        padding: 5%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+.aboutus-contactus-landing-page>* {
+    background-image: linear-gradient(to right, rgb(209, 226, 55), rgb(9, 148, 21));
+    ;
+    /* background-image: linear-gradient(to right, rgb(41, 202, 41), rgb(138, 161, 158)); */
+    border-radius: 5px;
+    width: 60%;
+    height: 60%;
+    padding: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.test iframe{
-    /* background-color: aqua; */
+
+.test iframe {
     border-radius: 5px;
     width: 80%;
     height: 400px;
@@ -400,14 +406,15 @@ main {
     border-style: dashed;
 
 }
-.test{
+
+.test {
     display: flex;
     flex-direction: row;
     gap: 30px;
-    
+
 }
 
-.about-contact-container{
+.about-contact-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -415,14 +422,30 @@ main {
     justify-content: space-between;
 }
 
-.about-contact-container>*:hover{
+.about-contact-container>*:hover {
     scale: calc(1.05);
     transition: 0.3s;
 }
-/* 
-.contact-us {
-    background-color: aqua;
-    border-radius: 5px;
-    width: 25%;
-    height: 60%;
-} */
+
+.about-contact-container>*>p>a {
+    /* background-color: rgb(22, 192, 79); */
+    color: #fff;
+    text-decoration: none;
+    /* border-radius: 5px; */
+    font-weight: bold;
+    padding: 3px;
+}
+
+/*
+//////////////////////////////////END LAST PAGE//////////////////////////////////
+*/
+
+@media(min-width: 0px) and (max-width: 600px) {
+    .sidebar .other-links {
+        display: none;
+    }
+
+        .slider {
+            display: none;
+        }
+}
