--- a/style/shop.css
+++ b/style/shop.css
@@ -5,16 +5,32 @@ main {
     font-size: 15px;
 }
 
+.base {
+    display: flex;
+    align-items: flex-start;
+    gap: 5px;
+}
+
 .filters {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    width: 16%;
+    width: 18%;
     position: fixed;
     top: 35vh;
-    left: 2%;
+    left: 1%;
     box-shadow: 0 5px 5px rgba(117, 117, 117, 0.911);
+}
+
+.content {
+    margin-left: 20%;
+    width: 60%;
+    margin-right: 1%;
+}
+
+.products-cart {
+    width: 18%;
 }
 
 
@@ -26,11 +42,11 @@ main {
     font-size: 15px;
     margin-bottom: 20px;
     width: 70%;
+    cursor: pointer;
 }
 
-.content {
-    margin-left: 20%;
-    width: 60%;
+.filters button:hover {
+    transform: scale(1.05);
 }
 
 .intro {
@@ -41,69 +57,50 @@ main {
     text-align: center;
 }
 
+.intro div{
+    background-color: #faedd142;
+    padding: 10px;
+    margin-top: -20px;
+}
+
 .category {
     display: flex;
-    list-style-type: none;
-    padding: 0;
-}
-
-.category * {
-    display: flex;
+    justify-content: space-evenly;
     width: 100%;
-    padding: 10px;
-    border-radius: 10px;
 }
 
-.category li {
-    display: flex;
+.category button {
     justify-content: center;
+    width: 25%;
     border: solid;
     border-radius: 10px;
     border-color: #008738;
-    margin: 0px 15px 0px 15px;
-    cursor: pointer;
+    margin: 15px;
     font-size: 20px;
     padding: 5px 10px 5px 10px;
     border-color: #0087388e;
     border-radius: 10px;
     background-color: #00873818;
     box-shadow: 0 5px 5px rgba(117, 117, 117, 0.911);
+    cursor: pointer;
 }
 
-.category li:hover {
+.category button:hover {
     transform: scale(1.05);
     border-color: rgb(0, 70, 4);
 }
-
-
-/* .category li:active {
-    background-color: #b61d1d;
-    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.1);
-} */
-
 
 .filter-price {
     display: inline-flex;
     align-items: center;
     justify-content: center;
     width: 70%;
-    margin-top: 0;
+    margin: 10px 0 30px 0;
 }
 
-
-.slider {
-    height: 40px;
-}
-
-
-#precio-minimo {
+#min-price, #max-price {
     font-weight: bold;
-    margin-right: 5px;
-}
-
-#precio-maximo {
-    font-weight: bold;
-    margin-left: 5px;
+    width: 15%;
 }
 
 .products {
@@ -154,12 +151,11 @@ main {
 }
 
 h1 {
-    margin-right: 2%;
     font-size: 45px;
     font-weight: bold;
-    color: rgb(0, 29, 4);
-    margin-left: 25%;
-    margin-right: 25%;
+    color: rgba(248, 248, 248, 0.781);
+    text-align: center;
+    -webkit-text-stroke: 1px black;
 }
 
 
@@ -171,10 +167,6 @@ p {
     margin-right: 27%;
 }
 
-/* span {
-    background: none repeat scroll 0 0 #d0ffba11;
-} */
-
 .cartButton {
     text-decoration:none; 
     text-align:center; 
@@ -185,7 +177,90 @@ p {
     font:16px "Lucida Sans Unicode", "Lucida Grande", sans-serif; 
     font-weight: bold; 
     color:#ffffff; 
-    background:#005587; 
+    background:#005587;
+    cursor: pointer; 
+}
+
+.carrito {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+}
+
+.cabecera-carrito{
+    background-color: #0055879c;
+    color: white;
+    padding: 0 10px 0 10px;
+    margin-bottom: 10px;
+}
+
+.cabecera-carrito,
+.producto-carrito {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #ccc;
+    width: 100%;
+    gap: 10px;
+}
+
+.producto-carrito {
+    margin-bottom: 10px;
+    padding-bottom: 20px;
+}
+
+.producto-imagen {
+    height: 40px;
+    width: auto;
+    padding: 0;
+}
+
+.producto-nombre {
+    width: 60px;
+    font-size: 12px;
+    text-align: center;
+}
+
+.cantidad {
+    width: 60px;
+    font-size: 13px;
+    text-align: center;
+}
+
+.total {
+    width: 60px;
+    font-size: 13px;
+    text-align: right;
+}
+
+.eliminar {
+    width: 20px;
+    margin-right: 10px;
+    padding: 0 10px 0 10px;
+    height: auto;
+    cursor: pointer;
+}
+
+
+.total-cart{
+    margin: 20px 0 20px 0;
+    text-align: center;
+}
+
+.final-button {
+    display: block;
+    margin: 0 auto;
+    width: 30%;
+    height: 40px;
+    padding: 8px 28px; 
+    border:solid #000000; 
+    border-width: 1px;
+    border-radius: 14px; 
+    font:16px "Lucida Sans Unicode", "Lucida Grande", sans-serif; 
+    font-weight: bold; 
+    color:#ffffff; 
+    background:#867d00;
+    cursor: pointer; 
 }
 
 .offer {
