--- a/style/landingPageStyle.css
+++ b/style/landingPageStyle.css
@@ -43,18 +43,18 @@ main {
     width: 500px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
 }
 
-.tabs * {
+.tabs > a {
     color: #fff;
-    font-size: 18px;
+    font-size: 15px;
     text-decoration: none;
     border-right: solid 2px;
     border-color: #ffeea2;
     font-weight: bold;
-    padding: 3px 20px 3px 0px;
+    padding: 3px 10px 3px 10px;
     transition: background-color 0.3s ease;
 }
 
@@ -64,29 +64,47 @@ main {
 }
 
 .shopping-bag {
+    background-image: url("../assets/shopping-bag.png");
+    width: 50px;
+    height: 50px;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 17px;
-    border-right: 0;
+    justify-content: center;
+    margin-bottom: 5px;
+    margin-left: 10px;
+    /* margin-bottom: 17px; */
+    /* border-right: 0; */
     cursor: pointer;
-    transform: scale(1);
+    /* transform: scale(1); */
+    border: none;
 
 }
 
 .bag-number {
     color: #000000;
-    margin-top: -61px;
-    margin-right: 10px;
+    background-color: #b4bd61;
+    border-radius: 50%;
+    margin-top: 5px;
+    /* margin-top: -61px; */
+    /* margin-right: 10px; */
     border-right: 0;
-    transform: scale(1);
+    font-size: small;
+    font-weight: bolder;
+    /* transform: scale(1); */
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.cart-icon {
+/* .cart-icon {
     margin: 0px 40px 25px 20px;
     border-right: 0;
     transform: scale(1);
-}
+} */
 
 
 .options-navbar {
