--- a/style/landingPageStyle.css
+++ b/style/landingPageStyle.css
@@ -9,18 +9,17 @@ body {
     /*to be implemented*/
 }
 
-html {
-    scroll-behavior: smooth;
-}
 
 main {
     width: 100%;
     height: 100%;
-    overflow: scroll;
+    /* overflow: scroll; */
 }
 
 
 .navbar {
+    /* position: fixed;
+    z-index: 500; */
     width: 100%;
     margin: 0px;
     height: calc(50px + 1.5vw);
@@ -43,7 +42,7 @@ main {
     width: 500px;
     display: flex;
     flex-direction: row;
-    /* justify-content: space-between; */
+    justify-content: center;
     align-items: center;
 }
 
@@ -243,6 +242,7 @@ main {
 
 .slide {
     width: 70%;
+    height: 85%;
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
     overflow: hidden;
@@ -261,7 +261,7 @@ main {
     flex-direction: row;
     justify-content: center;
     gap: 30px;
-    background-color: #09b;
+    background-color: rgb(22, 192, 79);
     border-radius: 10px;
 }
 
@@ -282,12 +282,15 @@ main {
 .shop-btn {
     margin-top: 20px;
     padding: 10px 20px;
-    background-color: #09b;
+            background-color: rgb(22, 192, 79);
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
     font-weight: bold;
     transition: background-color 0.3s ease;
+
+
+
 }
 
 .shop-btn:hover {
@@ -345,9 +348,15 @@ main {
 }
 
 .blog-landing-page h2 {
-    text-align: center;
-    width: 40%;
-    background-color: #fdfdfdc5;
+    font-size: 2.5em;
+        /* color: #000000; */
+        margin-bottom: 20px;
+        background-color: rgb(22, 192, 79);
+        color: #fff;
+        text-decoration: none;
+        border-radius: 5px;
+        font-weight: bold;
+        padding: 3px;
 }
 
 .blog-content h3 {
@@ -377,6 +386,9 @@ main {
     top: 70%;
     font-weight: bold;
     color: #000000;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .blog-post:hover {
@@ -431,8 +443,8 @@ main {
 }
 
 .aboutus-contactus-landing-page>* {
-    background-image: linear-gradient(to right, rgb(209, 226, 55), rgb(9, 148, 21));
-    ;
+    /* background-image: linear-gradient(to right, rgb(209, 226, 55), rgb(9, 148, 21)); */
+     
     /* background-image: linear-gradient(to right, rgb(41, 202, 41), rgb(138, 161, 158)); */
     border-radius: 5px;
     width: 60%;
@@ -443,6 +455,13 @@ main {
     align-items: center;
 }
 
+.map-container{
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .test iframe {
     border-radius: 5px;
     width: 80%;
@@ -454,8 +473,18 @@ main {
 .test {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     gap: 30px;
 
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 10px;
+    text-align: center;
+    /* text-decoration: underline; */
+
+}
+
+.test h3{
+    text-decoration: underline;
 }
 
 .about-contact-container {
@@ -463,12 +492,13 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content:flex-start;
-    margin-right: 5%;
+    /* margin-right: 5%; */
+    width: 40%;
 }
 
-.about-contact-container div{
+/* .about-contact-container div{
     margin: 5%
-}
+} */
 
 .about-contact-container>*:hover {
     scale: calc(1.05);
@@ -486,7 +516,7 @@ h1 {
 h2 {
     font-size: 45px;
     font-weight: bold;
-    color: #096E11;
+    color: hsl(125, 85%, 23%);
     text-align: center;
     -webkit-text-stroke: 1px rgb(19, 19, 19);
 }
@@ -503,11 +533,12 @@ h3 {
 
 .about-contact-container>*>p>a {
     /* background-color: rgb(22, 192, 79); */
-    color: #fff;
+    color: hsl(125, 85%, 23%);;
     text-decoration: none;
     /* border-radius: 5px; */
     font-weight: bold;
     padding: 3px;
+    text-decoration: underline;
 }
 
 /*
