--- a/style/aboutStyle.css
+++ b/style/aboutStyle.css
@@ -53,7 +53,7 @@ p {
     flex-direction: row;
     align-items: center;
     gap: 10%;
-    padding: 90px;
+    padding: 0px 90px 90px 90px;
 
 }
 
